snapshots/care/data4life/hc-util-sdk-kmp/error/maven-metadata.xml.sha512
99ec1cbe0a62910c96e985acc66129d6c092db19f53ebf3a4b3bd5d816eed948143efd828fb5c66d91a5f78bab56092b9cad0ad5d9f3e662f6ef71bba7287e06